fixed scrollbar colors

--- a/ws/main.css
+++ b/ws/main.css
@@ -10,7 +10,7 @@
  
 ::-webkit-scrollbar-thumb {
 	border-radius: 10px;
-	background-color : ;
+	background-color : black;
 	-webkit-box-shadow: inset 0 0 6px white; 
 }
 
